ops/k8s/traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: dashboard.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-service
              servicePort: http
